--- a/src/app/reverse/reverse.component.html
+++ b/src/app/reverse/reverse.component.html
@@ -1,4 +1,4 @@
 <p>reverse works!</p>
-<input [(ngModel)]="inputString" placeholder="enter string" />
-<button (click)="reverse()"></button>
+<input [(ngModel)]="inputString2" placeholder="enter string" />
+<button (click)="reverse()">convertReverse</button>
 <p>Reverse string:{{ reversString }}</p>
